[gd_scene load_steps=2 format=2]

[ext_resource path="res://Assets/Frameworks/IncompatibleMod.gd" type="Script" id=1]

[node name="IncompatibleMod" type="HBoxContainer"]
margin_right = 296.0
margin_bottom = 206.0
size_flags_horizontal = 3
script = ExtResource( 1 )

[node name="Spacer" type="Control" parent="."]
margin_right = 5.0
margin_bottom = 212.0
rect_min_size = Vector2( 5, 0 )

[node name="Fields" type="VBoxContainer" parent="."]
margin_left = 9.0
margin_right = 258.0
margin_bottom = 212.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 5

[node name="Divider2" type="Control" parent="Fields"]
margin_right = 249.0
margin_bottom = 3.0
rect_min_size = Vector2( 0, 3 )

[node name="HeaderLabel" type="Label" parent="Fields"]
margin_top = 8.0
margin_right = 249.0
margin_bottom = 22.0
text = "Mod Name:"
valign = 1

[node name="ModNameText" type="LineEdit" parent="Fields"]
margin_top = 27.0
margin_right = 249.0
margin_bottom = 53.0
clear_button_enabled = true

[node name="Divider3" type="Control" parent="Fields"]
margin_top = 58.0
margin_right = 249.0
margin_bottom = 61.0
rect_min_size = Vector2( 0, 3 )

[node name="HeaderLabel2" type="Label" parent="Fields"]
margin_top = 66.0
margin_right = 249.0
margin_bottom = 80.0
text = "Mod Link:"
valign = 1

[node name="ModLinkText" type="LineEdit" parent="Fields"]
margin_top = 85.0
margin_right = 249.0
margin_bottom = 111.0
clear_button_enabled = true

[node name="Divider4" type="Control" parent="Fields"]
margin_top = 116.0
margin_right = 249.0
margin_bottom = 119.0
rect_min_size = Vector2( 0, 3 )

[node name="PatchableCheckBox" type="CheckBox" parent="Fields"]
margin_top = 124.0
margin_right = 249.0
margin_bottom = 148.0
pressed = true
text = "Has Patch?"

[node name="Divider5" type="Control" parent="Fields"]
margin_top = 153.0
margin_right = 249.0
margin_bottom = 156.0
rect_min_size = Vector2( 0, 3 )

[node name="PatchLinkHeader" type="Label" parent="Fields"]
margin_top = 161.0
margin_right = 249.0
margin_bottom = 175.0
text = "Patch Link:"
valign = 1

[node name="PatchLinkText" type="LineEdit" parent="Fields"]
margin_top = 180.0
margin_right = 249.0
margin_bottom = 206.0
clear_button_enabled = true

[node name="Divider" type="Control" parent="Fields"]
margin_top = 211.0
margin_right = 249.0
margin_bottom = 212.0
rect_min_size = Vector2( 0, 1 )
size_flags_horizontal = 3

[node name="DividerColor" type="ColorRect" parent="Fields/Divider"]
anchor_right = 1.0
rect_min_size = Vector2( 0, 1 )
size_flags_horizontal = 3
color = Color( 0.278431, 0.278431, 0.278431, 1 )

[node name="Spacer4" type="Control" parent="."]
margin_left = 262.0
margin_right = 263.0
margin_bottom = 212.0
rect_min_size = Vector2( 1, 0 )
size_flags_vertical = 3

[node name="Delete" type="VBoxContainer" parent="."]
margin_left = 267.0
margin_right = 287.0
margin_bottom = 212.0

[node name="Spacer2" type="Control" parent="Delete"]
margin_right = 20.0
margin_bottom = 30.0
rect_min_size = Vector2( 10, 30 )

[node name="DeleteButton" type="Button" parent="Delete"]
margin_top = 34.0
margin_right = 20.0
margin_bottom = 178.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "X"

[node name="Spacer3" type="Control" parent="Delete"]
margin_top = 182.0
margin_right = 20.0
margin_bottom = 212.0
rect_min_size = Vector2( 10, 30 )

[node name="Spacer5" type="Control" parent="."]
margin_left = 291.0
margin_right = 296.0
margin_bottom = 212.0
rect_min_size = Vector2( 5, 0 )
size_flags_vertical = 3

[connection signal="toggled" from="Fields/PatchableCheckBox" to="." method="_on_PatchableCheckBox_toggled"]
[connection signal="pressed" from="Delete/DeleteButton" to="." method="_on_DeleteButton_pressed"]
